Revision history for AM-Algorithm


{{$NEXT}}
    Using C99 datatypes in AM.xs to ensure correct bit sizes
2.35      2013-12-05 19:50:27 America/Los_Angeles
    created Algorithm::AM::Project to handle all data file processing
        - also checks size of data vectors!
        - has lots of accessors and new error checking, including problems with number of variables!
    caller's autoflush setting is no longer clobbered
    lots more refactoring
    removed use of 'given' and 'when', which are experimental and caused warnings and therefore failed tests
2.34      2013-09-03 22:39:22 America/Los_Angeles
    Considerable refactoring of how arguments and variables are handled
        - use object or data hash instead of automatic importing
        - most of them renamed, and possible values have changed
    - new tests for errors and warnings

2.33      2013-06-03 22:22:10 America/Los_Angeles
    Changed chomp mechanism so Windows files can be used in testing on *nix
2.32      2013-05-30 14:37:09 America/Los_Angeles
    Fixed package declarations in POD files, which prevented listing on metacpan
2.31      2013-05-15 15:22:32 America/Los_Angeles
	First CPAN release.