@@ -2,7 +2,11 @@ Revision history for AM-Algorithm
 
 
 {{$NEXT}}
-    Using C99 datatypes in AM.xs to ensure correct bit sizes
+    remove given/when (which trigger 'experimental' warnings)
+    better handling of project files
+    line directives added to ginormous eval statement
+    add methods to Project for adding data and test items
+    use C99 datatypes in AM.xs to ensure correct bit sizes
 2.35      2013-12-05 19:50:27 America/Los_Angeles
     created Algorithm::AM::Project to handle all data file processing
         - also checks size of data vectors!
